implement summary with ordering